--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="cardinal">#B41434</color>
     <color name="darkCardinal">#870B24</color>
-    <color name="chathams_blue">#195386</color>
+    <color name="chathams_blue">#1F4E78</color>
     <color name="pinky_red">#DA688F</color>
     <color name="textInputOutlineColor">#45D5E8</color>
     <color name="rating_star_color">#F9D31E</color>
+    <color name="product_cardview_background">#18C1D6</color>
 </resources>
