--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="pinky_red">#DA688F</color>
     <color name="textInputOutlineColor">#45D5E8</color>
     <color name="rating_star_color">#F9D31E</color>
-    <color name="product_cardview_background">#18C1D6</color>
+    <color name="product_cardview_background">#E2F5F8</color>
 </resources>
