Test code on star button and product cardview

--- a/app/src/main/res/layout/product_cardview.xml
+++ b/app/src/main/res/layout/product_cardview.xml
@@ -31,7 +31,9 @@
             android:id="@+id/cardview_product_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="32dp"
             android:textSize="24sp"
             android:textColor="?attr/colorPrimaryDark"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,24 +44,28 @@
         <TextView
             style="@style/Widget.Scannera.TextView"
             android:id="@+id/cardview_product_brand"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="?attr/colorPrimaryDark"
-            android:layout_margin="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="24dp"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="@id/first_h_guideline"
-            app:layout_constraintStart_toStartOf="@id/lr_guideline" />
+            app:layout_constraintStart_toStartOf="@id/lr_guideline"
+            app:layout_constraintEnd_toStartOf="@id/star_btn"/>
 
         <TextView
             style="@style/Widget.Scannera.TextView"
             android:id="@+id/cardview_product_price"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="?attr/colorPrimaryDark"
             android:layout_margin="12dp"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@id/cardview_product_brand"
-            app:layout_constraintStart_toStartOf="@id/lr_guideline" />
+            app:layout_constraintStart_toStartOf="@id/lr_guideline"
+            app:layout_constraintEnd_toStartOf="@id/star_btn"/>
 
         <ImageButton
             android:id="@+id/star_btn"
