--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="cardinal">#B41434</color>
     <color name="darkCardinal">#870B24</color>
-    <color name="chathams_blue">#1F4E78</color>
+    <color name="colorPrimaryDark">#1F4E78</color>
+    <color name="colorPrimaryDarkVar">#C6285985</color>
     <color name="pinky_red">#DA688F</color>
     <color name="textInputOutlineColor">#45D5E8</color>
     <color name="rating_star_color">#F9D31E</color>
-    <color name="product_cardview_background">#E9F4F6</color>
+    <color name="product_cardview_background">#ECF8FA</color>
 </resources>
