--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -33,6 +33,65 @@
         app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline"
         app:layout_constraintVertical_bias="0.65" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="invisible"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/product_brand_views"
+        android:layout_marginStart="@dimen/account_info_elem_se_margin"
+        android:layout_marginEnd="@dimen/account_info_elem_se_margin"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/activity_title">
+        <TextView
+            android:id="@+id/ai_username_label"
+            style="@style/Widget.Scannera.ProductFeedTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/product_brand"
+            android:textColor="?attr/colorPrimaryDark"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/ai_username_inputlayout"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/product_feed_input_margin_start"
+            android:layout_marginEnd="5dp"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toStartOf="@id/edit_username_btn"
+            app:layout_constraintStart_toEndOf="@id/ai_username_label"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ai_username_et"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/username_default"
+            android:inputType="none"
+            android:textColor="?attr/colorPrimaryDark"
+            android:maxLength="20" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Scannera.Button"
+            android:id="@+id/edit_username_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signup"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/back_btn_h_guideline"
         android:layout_width="wrap_content"
