--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -18,20 +18,21 @@
         android:layout_marginTop="10dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_marginTop="12dp"
         android:id="@+id/edit_text_input_layout"
         style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
-        app:errorEnabled="true"
+        android:layout_margin="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
         android:layout_gravity="center_horizontal"
-        app:startIconDrawable="@drawable/ic_edit">
+        app:endIconMode="clear_text"
+        app:startIconDrawable="@drawable/ic_edit"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:hint="@string/enter_info_hint"
             android:maxLength="50"/>
     </com.google.android.material.textfield.TextInputLayout>
