Made the edit dialog a customised class rather than set everything up on the spot. Added max length of input characters in the dialogs and the product feed prompts.

--- a/app/src/main/res/layout/dialog_product_feed_tv_edit_category.xml
+++ b/app/src/main/res/layout/dialog_product_feed_tv_edit_category.xml
@@ -32,6 +32,7 @@
             android:layout_weight="1"
             android:inputType="textAutoComplete"
             android:hint="@string/category_drop_down_menu_hint"
+            android:maxLength="30"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
