--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -49,7 +49,7 @@
                     android:hint="@string/enter_info_hint"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:maxLength="50"/>
+                    android:maxLength="30"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -70,6 +70,7 @@
                     android:layout_weight="1"
                     android:inputType="textAutoComplete"
                     android:hint="@string/category_drop_down_menu_hint"
+                    android:maxLength="30"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
